# workflow-backups

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  PLAN.md  QUICKSTART.md  README.md  config.quantecon-all.yml  config.quantecon-core.yml  config.yml  noxfile.py  pyproject.toml  requirements.txt  setup-dev.sh
.github/: copilot-instructions.md
.github/workflows/: backup.yml
aws/: README.md  s3-policy.json  trust-policy.json
configs/: config.yml.backup
docs/: PROJECT_STRUCTURE.md  architecture.md  config.example.yml  example_report.md
docs/releases/: README.md
src/: __init__.py  main.py
src/backup/: __init__.py  backup_manager.py  issues_handler.py  repo_matcher.py  s3_handler.py
tests/: conftest.py  test_backup_manager.py  test_issues_handler.py  test_main.py  test_repo_matcher.py  test_s3_handler.py
